# zeth

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  README_Docker.md  README_Raiko.md  README_SGX.md  justfile  license-check.py  prove_block.sh  pullblock.sh  run-parallel.sh  run_bonsai.sh  run_parallel.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml  taiko.toml  token.txt
crates/chainspec/: Cargo.toml
crates/chainspec/src/: lib.rs
crates/core/: Cargo.toml
crates/core-ethereum/: Cargo.toml
crates/core-ethereum/src/: chain_spec.rs  lib.rs
crates/core-optimism/: Cargo.toml
crates/core-optimism/src/: lib.rs
crates/core/src/: db.rs  driver.rs  keccak.rs  lib.rs  map.rs  mpt.rs  rescue.rs
crates/core/src/db/: changeset.rs  memory.rs  mod.rs  trie.rs  unreachable.rs  update.rs  wrapper.rs
crates/core/src/stateless/: block.rs  client.rs  data.rs  driver.rs  engine.rs  execute.rs  finalize.rs  initialize.rs  mod.rs  post_exec.rs  pre_exec.rs  validate.rs
crates/core/src/trie/: archived.rs  data.rs  mod.rs  node.rs  pointer.rs  reference.rs  resolve.rs  rlp.rs  util.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs
crates/preflight/: Cargo.toml
crates/preflight-ethereum/: Cargo.toml
crates/preflight-ethereum/src/: lib.rs
crates/preflight-optimism/: Cargo.toml
crates/preflight-optimism/src/: lib.rs
crates/preflight/src/: client.rs  db.rs  derive.rs  driver.rs  lib.rs  trie.rs
crates/preflight/src/provider/: cache_provider.rs  db.rs  file_provider.rs  mod.rs  query.rs  rpc_provider.rs  types.rs
crates/rpc-proxy/: Cargo.toml  build.rs
crates/rpc-proxy/src/: lib.rs  main.rs  rpc.rs  trie.rs  witness.rs
crates/rpc-proxy/src/db/: mod.rs  preflight.rs  provider.rs
crates/trie/: Cargo.toml
crates/trie/src/: archived.rs  data.rs  keccak.rs  lib.rs  node.rs  pointer.rs  reference.rs  resolve.rs  rlp.rs  util.rs  value.rs  vec.rs
crates/zeth/: Cargo.toml
crates/zeth/src/: cli.rs  executor.rs  lib.rs
guests/: Cargo.toml  build.rs
guests/anvil-block/: Cargo.toml
guests/anvil-block/src/: main.rs
guests/eth-block/: Cargo.toml
guests/eth-block/src/: main.rs
guests/eth-test/: Cargo.toml
guests/ganache-merge-block/: Cargo.toml
guests/ganache-merge-block/src/: main.rs
guests/ganache-shanghai-block/: Cargo.toml
guests/ganache-shanghai-block/src/: main.rs
guests/linea-block/: Cargo.toml
guests/linea-block/src/: main.rs
guests/op-block/: Cargo.toml
guests/op-block/src/: main.rs
guests/op-compose/: Cargo.toml
guests/op-compose/src/: main.rs
guests/op-derive/: Cargo.toml
guests/op-derive/src/: main.rs
guests/reth/: Cargo.toml
guests/reth-block-eth/: Cargo.toml
guests/reth-block-eth/src/: main.rs
guests/reth-ethereum/: Cargo.toml
guests/reth-ethereum/src/: main.rs
guests/reth-optimism/: Cargo.toml
guests/reth-optimism/src/: main.rs
guests/reth/src/: main.rs
guests/src/: tree.txt
guests/stateless-client/: Cargo.toml
guests/stateless-client/src/: lib.rs
host/: Cargo.toml
host/lib/: verify.rs
host/src/: cli.rs  lib.rs  main.rs
host/src/operations/: build.rs  chains.rs  info.rs  mod.rs  rollups.rs  snarks.rs
host/src/util/: lib.rs  mpt.rs  preflight.rs  provider_db.rs
host/testdata/input/: CallCreateCallCodeTest_Call1024BalanceTooLow.json
host/tests/: blocks.rs  cmd.rs  executor.rs
lib/: Cargo.toml
lib/src/: auth_db.rs  block_builder.rs  consts.rs  derivation.rs  execution.rs  finalization.rs  initialization.rs  input.rs  lib.rs  mem_db.rs  output.rs  preparation.rs  protocol_instance.rs  taiko_utils.rs  utils.rs  validation.rs
lib/src/builder/: execute.rs  finalize.rs  initialize.rs  mod.rs  prepare.rs
lib/src/builder/execute/: ethereum.rs  linea.rs  mod.rs  optimism.rs  taiko.rs
lib/src/execution/: ethereum.rs  mod.rs  optimism.rs
lib/src/host/: host.rs  mod.rs  mpt.rs  preflight.rs  provider_db.rs  rpc_db.rs  taiko.rs  taiko_provider.rs  verify.rs
lib/src/host/provider/: file_provider.rs  (+3 more)
lib/src/optimism/: batcher.rs  batcher_channel.rs  batcher_db.rs  batcher_transactions.rs  batches.rs  channels.rs  composition.rs  config.rs  deposits.rs  derivation.rs  epoch.rs  mod.rs  system_config.rs
lib/src/taiko/: block_builder.rs  consts.rs  execute.rs  host.rs  mod.rs  precheck.rs  prepare.rs  protocol_instance.rs  provider.rs  utils.rs  verify.rs
lib/tests/: evm.rs
lib/tests/common/: ethers.rs  mod.rs
primitives/: Cargo.toml
primitives/src/: access_list.rs  alloy.rs  batch.rs  block.rs  ethers.rs  keccak.rs  lib.rs  mmr.rs  mpt.rs  optimism.rs  receipt.rs  revm.rs  signature.rs  transaction.rs  tree.rs  withdrawal.rs
primitives/src/taiko/: anchor.rs  consts.rs  mod.rs  proposal.rs  protocol_instance.rs  utils.rs
primitives/src/transactions/: ethereum.rs  linea.rs  mod.rs  optimism.rs  signature.rs
primitives/src/trie/: account.rs  mod.rs  mpt.rs
raiko-guest/: Cargo.toml
raiko-guest/config/: raiko-guest.manifest.template
raiko-guest/src/: app_args.rs  main.rs  one_shot.rs  ratls_server.rs  signature.rs
raiko-guest/src/powdr/: main.rs
raiko-guest/src/risc0/: main.rs
raiko-guest/src/sgx/: one_shot.rs
raiko-guest/src/succinct/: main.rs
raiko-host/: Cargo.toml  build.rs
raiko-host/config/: config.toml  docker_config.toml
raiko-host/guests/sgx/: raiko-guest.manifest.template
raiko-host/src/: main.rs  metrics.rs  rolling.rs  shit.rs
raiko-host/src/host/: host.rs  mod.rs  provider_db.rs  taiko_provider.rs
raiko-host/src/prover/: consts.rs  context.rs  error.rs  execution.rs  json_rpc.rs  mod.rs  prepare_input.rs  request.rs  server.rs  utils.rs
risc0-driver/: Cargo.toml
risc0-driver/src/: cli.rs  main.rs
risc0-driver/src/operations/: build.rs  mod.rs  rollups.rs
sgx-ra/: Cargo.toml
sgx-ra/src/: client.rs  server_sgx.rs
sgx-ra/src/support/: custom_write_all.rs  debug.rs  entropy.rs  keys.rs  mod.rs  net.rs  rand.rs
testeth/: Cargo.toml
testeth/src/: lib.rs
testeth/testguest/: Cargo.toml
testeth/testguest/src/: main.rs
testeth/tests/: evm.rs  executor.rs
(+122 files in other folders)
