[workspace]
resolver = "2"
members = ["bin/*", "crates/*", "guests", "testing/ef-tests"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

# RISC Zero
[workspace.dependencies.bonsai-sdk]
version = "1.4.1-rc.1"
features = ["non_blocking"]

[workspace.dependencies.risc0-build]
version = "3.0.1-rc.1"
features = ["unstable"]

[workspace.dependencies.risc0-zkvm]
version = "3.0.0-rc.1"
features = ["unstable"]

[workspace.dependencies.risc0-ethereum-trie]
git = "https://github.com/risc0/risc0-ethereum"
features = ["orphan", "rkyv", "rlp_serialize", "serde"]

# External
[workspace.dependencies]
# Alloy
alloy = { version = "1.0.6", features = ["full"] }
alloy-chains = "0.2.1"
alloy-consensus = "1.0.6"
alloy-genesis = "1.0.6"
alloy-primitives = { version = "1.1.2", default-features = false, features = [
    "k256",
    "map-hashbrown",
] }
alloy-rlp = "0.3.12"
op-alloy-consensus = "0.16.0"
op-alloy-network = "0.16.0"
op-alloy-rpc-types = "0.16.0"

# Reth
reth-chainspec = { git = "https://github.com/risc0/reth", branch = "p1.4.3" }
reth-consensus = { git = "https://github.com/risc0/reth", branch = "p1.4.3" }
reth-ethereum-consensus = { git = "https://github.com/risc0/reth", branch = "p1.4.3" }
reth-evm = { git = "https://github.com/risc0/reth", branch = "p1.4.3" }
reth-evm-ethereum = { git = "https://github.com/risc0/reth", branch = "p1.4.3" }
reth-optimism-chainspec = { git = "https://github.com/risc0/reth", branch = "p1.4.3", features = ["serde"] }
reth-optimism-consensus = { git = "https://github.com/risc0/reth", branch = "p1.4.3" }
reth-optimism-evm = { git = "https://github.com/risc0/reth", branch = "p1.4.3", default-features = false }
reth-optimism-forks = { git = "https://github.com/risc0/reth", branch = "p1.4.3", default-features = false }
reth-primitives = { git = "https://github.com/risc0/reth", branch = "p1.4.3", default-features = false, features = [
    "std",
    "alloy-compat",
] }
reth-revm = { git = "https://github.com/risc0/reth", branch = "p1.4.3", features = ["serde"] }
reth-storage-errors = { git = "https://github.com/risc0/reth", branch = "p1.4.3" }

# Zeth
zeth = { path = "crates/zeth" }
zeth-core = { path = "crates/core" }
zeth-core-ethereum = { path = "crates/core-ethereum" }
zeth-core-optimism = { path = "crates/core-optimism" }
zeth-guests = { path = "guests" }
zeth-preflight = { path = "crates/preflight" }
zeth-preflight-ethereum = { path = "crates/preflight-ethereum" }
zeth-preflight-optimism = { path = "crates/preflight-optimism" }

# Others
anyhow = "1.0.89"
async-trait = "0.1.83"
bincode = "1.3.3"
bytemuck = "1.19.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.5"
hashbrown = { version = "0.15.2", features = ["rayon"] }
itertools = "0.14"
k256 = { version = "0.13.3", features = ["serde", "pem"] }
log = "0.4.22"
flate2 = "1.0.34"
once_cell = "1.20.2"
pot = "3.0.1"
rkyv = { version = "0.8.9", features = ["hashbrown-0_15"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["alloc"] }
serde_with = "3.11.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
