[workspace]
resolver = "2"
members = ["crates/*", "guests"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[workspace.dependencies]
# internal crates
guests = { path = "guests" }
zeth-core = { path = "crates/core" }
zeth-chainspec = { path = "crates/chainspec" }

# risc0
risc0-build = { git = "https://github.com/risc0/risc0.git", branch = "flaub/default-prover", features = [
    "unstable",
] }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", branch = "flaub/default-prover", features = [
    "unstable",
] }
risc0-ethereum-trie = { git = "https://github.com/risc0/risc0-ethereum.git", branch = "wollac/stateless-trie" }

# reth
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-stateless = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0" }

# revm
revm = { version = "27.1", default-features = false }
revm-bytecode = { version = "6.1", default-features = false }

# eth
alloy-chains = { version = "0.2.5", default-features = false }
alloy-evm = { version = "0.15.0", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false, features = [
    "map-foldhash",
] }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-trie = { version = "0.9.0", default-features = false }

alloy-hardforks = "0.2.7"

alloy = { version = "1.0.23", features = ["full"] }
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-eips = { version = "1.0.23" }
alloy-genesis = { version = "1.0.23", default-features = false }

# misc
bytemuck = "1.23"
async-trait = { version = "0.1.88" }
futures = "0.3"
serde = { version = "1.0", default-features = false }
thiserror = "2"
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
anyhow = { version = "1.0" }
clap = "4.5"
tracing = "0.1"
tracing-subscriber = "0.3"
