[package]
name = "zeth-guests"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { workspace = true }

[package.metadata.risc0]
methods = ["eth-block", "linea-block", "op-block", "op-derive", "op-compose"]

[features]
debug-guest-build = []
default = [
    "risc0-build/docker"
]
