[package]
name = "zeth-guests"
version = "0.3.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[build-dependencies]
risc0-build = { workspace = true }

[package.metadata.risc0]
methods = ["reth-ethereum", "reth-optimism"]

[features]
debug-guest-build = []
default = [
    "risc0-build/docker"
]
