[package]
name = "zeth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bonsai-sdk = { workspace = true }
bytemuck = "1.13"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
ethers-core = { version = "2.0", features = ["optimism"] }
ethers-providers = { version = "2.0", features = ["optimism"] }
hashbrown = { version = "0.13", features = ["inline-more"] }
heapless = "0.7.16"
hex = "0.4.3"
log = "0.4"
revm = { version = "3.3", default-features = false, features = ["std", "serde", "optional_no_base_fee", "optional_balance_check"] }
risc0-zkvm = { workspace = true, features = ["prove", "profiler"] }
ruint = { version = "1.10", default-features = false }
serde = "1.0"
tempfile = "3.6"
tokio = { version = "1.23", features = ["full"] }
zeth-guests = { path = "../guests" }
zeth-lib = { path = "../lib" }
zeth-primitives = { path = "../primitives" }

[dev-dependencies]
assert_cmd = "2.0"
rstest = "0.18"
