[package]
name = "zeth"
version = "0.1.0"
edition = "2021"
default-run = "zeth"

[dependencies]
alloy-sol-types = "0.4"
anyhow = "1.0"
bincode = "1.3.3"
bonsai-sdk = { workspace = true }
bytemuck = "1.13"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
ethers-core = { version = "2.0", features = ["optimism"] }
hex = "0.4.3"
log = "0.4"
revm = { workspace = true }
risc0-zkvm = { workspace = true, features = ["prove"] }
ruint = { version = "1.10", default-features = false }
serde = "1.0"
tempfile = "3.6"
tokio = { version = "1.23", features = ["full"] }
zeth-guests = { path = "../guests" }
zeth-lib = { path = "../lib" }
zeth-primitives = { path = "../primitives" }

[dev-dependencies]
assert_cmd = "2.0"
rstest = "0.18"

[features]
metal = [
    "risc0-zkvm/metal"
]
cuda = [
    "risc0-zkvm/cuda"
]
disable-dev-mode = [
    "risc0-zkvm/disable-dev-mode"
]
