[package]
name = "zeth"
version = "0.1.0"
edition = "2021"
default-run = "zeth"

[dependencies]
alloy-primitives = { version = "0.6.2", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy = { git = "https://github.com/alloy-rs/alloy.git", features = [
    "provider-http",
    "rpc-types-eth",
] }
alloy-sol-types = "0.6"
anyhow = "1.0"
bincode = "1.3.3"
bonsai-sdk = { workspace = true }
bytemuck = "1.13"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
hex = "0.4.3"
log = "0.4"
risc0-zkvm = { workspace = true, features = ["prove"] }
serde = "1.0"
tempfile = "3.6"
tokio = { version = "1.23", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
typetag = "0.2.15"
zeth-guests = { path = "../guests" }
zeth-lib = { path = "../lib" }
zeth-primitives = { path = "../primitives" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
rstest = "0.18"

[features]
metal = ["risc0-zkvm/metal"]
# cuda = ["risc0-zkvm/cuda"]
disable-dev-mode = ["risc0-zkvm/disable-dev-mode"]
