[package]
name = "zeth-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
zeth-primitives = { path = "../primitives", features = ["revm"] }
anyhow = { version = "1.0", default-features = false }
alloy-sol-types = { version = "0.6", default-features = false, optional = true }
alloy-primitives = { version = "0.6", default-features = false, features = [
  "rlp",
  "serde",
] }
bytes = { version = "1.5", default-features = false}
ethers-core = { version = "2.0", optional = true, features = ["optimism"] }
hashbrown = { workspace = true }
libflate = { version = "2.0.0", optional = true, default-features = false }
once_cell = { version = "1.18", default-features = false }

revm = { workspace = true, default-features = false }
ruint = { version = "1.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror-no-std = "2.0.2"
hex = { version = "0.4.3", optional = true,  default-features = false}
rlp = { version = "0.5.2", optional = true,  default-features = false}
tracing = { version = "0.1", optional = true,  default-features = false}
log = {version = "0.4", optional = true,  default-features = false}


[dev-dependencies]
bincode = "1.3"
serde_with = "3.1"

[features]
std = ["dep:ethers-core", "dep:log"]
taiko = [
    "zeth-primitives/taiko", 
    "revm/taiko",
    "dep:alloy-sol-types",
    "dep:hex",
    "dep:rlp",
    "dep:tracing"
    ]
optimism = [
  "std", 
  "revm/optimism",  
  "dep:alloy-sol-types",
  "dep:libflate"
]