[package]
name = "zeth-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
alloy-sol-types = { version = "0.6", default-features = false }
alloy-primitives = { version = "0.6", default-features = false, features = [
  "rlp",
  "serde",
] }
bytes = "1.5"
ethers-core = { version = "2.0", features = ["optimism"] }
hashbrown = { workspace = true }
libflate = "2.0.0"
once_cell = { version = "1.18", default-features = false }
revm = { workspace = true, default-features = false }
ruint = { version = "1.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror-no-std = {version = "2.0.2", optional = true}
zeth-primitives = { path = "../primitives", features = ["revm"] }
hex = { version = "0.4.3", optional = true}
rlp = { version = "0.5.2", optional = true}
tracing = { version = "0.1", optional = true}

# [target.'cfg(not(target_os = "zkvm"))'.dependencies]
thiserror = {version = "1.0", optional = true }
# anyhow = "1.0"
chrono = { version = "0.4", default-features = false, optional = true}
ethers-providers = { version = "2.0", features = ["optimism"], optional = true}
flate2 = { version = "1.0.26", optional = true}
log = { version = "0.4", optional = true}
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true}
serde_with = {version = "3.0", optional =  true}
tokio = { version = "1.23", features = ["full"], optional = true}
# zeth-primitives = { path = "../primitives", features = ["revm", "ethers"] }

[dev-dependencies]
bincode = "1.3"
serde_with = "3.1"

[features]
# default = ["taiko", "std"]
std = [
  "dep:chrono",
  "dep:ethers-providers",
  "dep:flate2",
  "dep:log",
  "dep:serde_json",
  "dep:serde_with",
  "dep:tokio",
  "dep:thiserror",
  "zeth-primitives/ethers",  
  "zeth-primitives/std",
  "anyhow/std",
]
taiko = [
    "zeth-primitives/taiko", 
    "revm/taiko",
    "dep:hex",
    "dep:rlp",
    "dep:tracing"
    ]
optimism = [
  "std", 
  "zeth-primitives/optimism", 
  "revm/optimism",  
  ]