[package]
name = "zeth-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
rlp = "0.5.2"
alloy-sol-types = { version = "0.6", default-features = false }
alloy-primitives = { version = "0.6", default-features = false, features = [
  "rlp",
  "serde",
  "std",
  "tiny-keccak",
] }
alloy-rpc-types = { git = "https://github.com/brechtpd/alloy", branch = "header-serialize" }
alloy-consensus = { git = "https://github.com/brechtpd/alloy", branch = "header-serialize" }
alloy-network = { git = "https://github.com/brechtpd/alloy", branch = "header-serialize", features = ["k256"] }
bytes = {version = "1.5", default-features = false}
hashbrown = { workspace = true }
libflate = { version = "2.0.0", optional = true }
once_cell = { version = "1.18", default-features = false }
revm = { workspace = true, default-features = false }
ruint = { version = "1.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror-no-std = "2.0.2"
zeth-primitives = { path = "../primitives", features = ["revm"] }
hex = { version = "0.4.3", default-features = false, optional = true }
url = "2.5.0"
ethers-core = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" }
#reth-primitives = { git = "https://github.com/paradigmxyz/reth.git" }

# [target.'cfg(feature = "std")'.dependencies]
thiserror = {version = "1.0", optional = true}
flate2 = {version = "1.0.26", optional = true}
log = {version = "0.4", optional = true}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] , optional = true}
serde_with = {version = "3.0", optional = true}
tokio = { version = "1.23", features = ["full"], optional = true}
chrono = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
bincode = "1.3"
serde_with = "3.1"

[features]
std = [
  "revm/std",
  "dep:thiserror",
  "anyhow/std",
  "dep:chrono",
  "dep:flate2",
  "dep:log",
  "dep:serde_json",
  "dep:serde_with",
  # "dep:tokio",
  ]
taiko = [
  "zeth-primitives/taiko",
  "revm/taiko",
  "dep:hex",
  ]
