[package]
name = "zeth-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.6.2", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
anyhow = "1.0"
bytes = { version = "1.1", default-features = false }
k256 = { version = "=0.13.3", features = [
    "std",
    "ecdsa",
], default_features = false }
revm-primitives = { workspace = true, optional = true }
rlp = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "=0.10.6", default-features = false }
sha3 = "0.10"
thiserror = "1.0"
alloy = { git = "https://github.com/alloy-rs/alloy.git", optional = true, default-features = false, features = [
    "rpc-types-eth",
    "eips",
] }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
log = "0.4"

[dev-dependencies]
bincode = "1.3"
hex-literal = "0.4"
serde_json = "1.0"

[features]
alloy = ["dep:alloy"]
revm = ["dep:revm-primitives"]
