[package]
name = "zeth-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = [
  "rlp",
  "serde",
] }
alloy-sol-types = { version = "0.6", default-features = false, optional = true }
alloy-dyn-abi = { version = "0.6",default-features = false, optional = true }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
alloy-rpc-types = { git = "https://github.com/brechtpd/alloy", branch = "header-serialize" }
anyhow = { version = "1.0", default-features = false }
bytes = { version = "1.5", default-features = false }
k256 = { version = "^0.13.3", features = ["ecdsa"], default_features = false }
hashbrown = { workspace = true }

revm-primitives = { workspace = true, optional = true, default-features = false }
rlp = { version = "0.5.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha3 = { version = "0.10", default-features = false}
thiserror = "1.0"

once_cell = { version = "1.18.0", default-features = false, features = ["critical-section"], optional = true }
hex = { version = "0.4",  default-features = false}
ruint = { version = "1.10", default-features = false }

[dev-dependencies]
bincode = "1.3"
hex-literal = "0.4"
serde_json = { version = "1.0", default-features = false }

[features]
std = ["anyhow/std"]
taiko = ["revm-primitives/taiko"]
revm = ["dep:revm-primitives"]
