[package]
name = "zeth-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = { git = "https://github.com/Wollac/alloy.git", branch = "fix/encoding", features = [
    "k256",
] }
alloy-eips = { git = "https://github.com/Wollac/alloy.git", branch = "fix/encoding" }
alloy-network = { git = "https://github.com/Wollac/alloy.git", branch = "fix/encoding", features = [
    "k256",
] }
alloy-primitives = { version = "0.6.4", default-features = false, features = [
    "k256",
    "rlp",
    "serde",
    "std",
] }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
anyhow = "1.0"
bytes = { version = "1.1", default-features = false }
ethers-core = { version = "2.0", optional = true, features = ["optimism"] }
rlp = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.7"
sha2 = { version = "0.10.8", default-features = false }
sha3 = "0.10"
thiserror = "1.0"

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
log = "0.4"

[dev-dependencies]
bincode = "1.3"
hex-literal = "0.4"
serde_json = "1.0"

[features]
ethers = ["dep:ethers-core"]
