[package]
name = "raiko-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
alloy-sol-types = { version = "0.6", optional = true }
alloy-primitives = { version = "0.6", default-features = false }
bincode = "1.3.3"
bytemuck = "1.13"
clap = { version = "4.0", features = ["derive"] }
structopt = "0.3.26"
structopt-toml = "0.5.1"
ethers-core = { version = "2.0" }
ethers-providers = { version = "2.0" }
flate2 = "1.0.28"
hex = "0.4.3"
revm = { workspace = true }
serde = "1.0"
serde_with = "3.4.0"
tempfile = "3.6"
tokio = { version = "1.23", features = ["full"] }
zeth-lib = { path = "../lib", features = ["taiko", "std"] }
zeth-primitives = { path = "../primitives", features = ["taiko", "ethers", "revm"] }
serde_json = "1.0"
hyper = { version = "0.14.27", features = ["server"] }
hashbrown = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tower = { version = "0.4.13", features = ["full"] }
lru_time_cache = "0.11.11"
prometheus = "0.13.3"
lazy_static = "1.4.0"
once_cell = "1.8.0"
thiserror = "1.0"
powdr = { git = "https://github.com/ceciliaz030/powdr", branch = "+nightly", optional = true}
sp1-core = { git = "https://github.com/succinctlabs/sp1.git", optional = true }
risc0-zkvm = { version = "0.20.1", features = ["prove"], optional = true }
bonsai-sdk = { version = "0.6.0", features = ["async"],  optional = true }


[dev-dependencies]
assert_cmd = "2.0"
rstest = "0.18"

[features]
powdr = ["dep:powdr"]
succinct = ["dep:sp1-core"]
risc0 = ["dep:risc0-zkvm", "dep:bonsai-sdk"]
sgx = []