[package]
name = "risc0-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.6.2", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = "0.6"
anyhow = "1.0"
bincode = "1.3.3"
bonsai-sdk = { version = "0.6.0", features = ["async"] }
bytemuck = "1.13"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
ethers-contract = { version = "2.0" }
ethers-core = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" }
ethers-providers = { version = "2.0" }
hex = "0.4.3"
log = "0.4"
risc0-zkvm = { version = "0.20.1", features = ["prove"] }
serde = "1.0"
tempfile = "3.6"
tokio = { version = "^1.23", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
typetag = "0.2.15"
risc0-guest = { path = "../raiko-guests/risc0" }
zeth-lib = { path = "../lib", features = ["taiko", "std"]}
zeth-primitives = { path = "../primitives", features = ["taiko", "std"]}

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
rstest = "0.18"

[features]
metal = ["risc0-zkvm/metal"]
# cuda = ["risc0-zkvm/cuda"]
disable-dev-mode = ["risc0-zkvm/disable-dev-mode"]

[workspace]