[package]
name = "zeth-testeth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ethers-core = "2.0"
hashbrown = "0.13"
revm = { version = "3.3", default-features = false, features = ["std", "serde"] }
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "3.1", features = ["base64"] }
stacker = "0.1"
zeth-guests = { path = "../guests" }
zeth-lib = { path = "../lib" }
zeth-primitives = { path = "../primitives" }

[dev-dependencies]
bincode = "1.3"
env_logger = "0.10"
log = "0.4"
risc0-zkvm = { workspace = true, features = ["prove"] }
rstest = "0.18"
tempfile = "3.6"
