[package]
name = "zeth-core-ethereum"
version = "0.3.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies.zeth-core]
workspace = true

[dependencies]
alloy-genesis.workspace = true
anyhow.workspace = true
k256.workspace = true
once_cell.workspace = true

reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-primitives.workspace = true
reth-revm.workspace = true
reth-storage-errors.workspace = true