[package]
name = "zeth-core-optimism"
version = "0.1.0"
edition = "2021"

[dependencies.zeth-core]
workspace = true

[dependencies]
alloy-genesis.workspace = true
anyhow.workspace = true
k256.workspace = true
once_cell.workspace = true
op-alloy-consensus.workspace = true

reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-consensus = { workspace = true, features = ["optimism"] }
reth-optimism-evm = { workspace = true, features = ["optimism"] }
reth-optimism-forks.workspace = true
reth-primitives = { workspace = true, features = ["optimism"] }
reth-revm = { workspace = true, features = ["optimism"] }
reth-storage-errors.workspace = true