[package]
name = "zeth-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
k256.workspace = true
pot.workspace = true
rkyv.workspace = true
serde.workspace = true
risc0-ethereum-trie.workspace = true

reth-chainspec.workspace = true
reth-primitives.workspace = true
reth-revm.workspace = true
reth-storage-errors.workspace = true
