[package]
name = "zeth-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true, features = ["map"] }
alloy-rlp = { workspace = true }
alloy-trie = { workspace = true }
reth-chainspec = { workspace = true }
reth-errors = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-stateless = { workspace = true }
reth-trie-common = { workspace = true }
revm-bytecode = { workspace = true }
risc0-ethereum-trie = { workspace = true }
