[package]
name = "zeth-host"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
alloy = { workspace = true }
alloy-chains = { workspace = true }
anyhow = { workspace = true }
blst = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
guests = { workspace = true }
reth-chainspec = { workspace = true }
reth-stateless = { workspace = true }
risc0-zkvm = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
zeth-core = { workspace = true }

[features]
unsafe-pre-merge = ["guests/unsafe-pre-merge", "zeth-core/unsafe-pre-merge"]
