[package]
name = "zeth-preflight-ethereum"
version = "0.3.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies.zeth-core]
workspace = true

[dependencies.zeth-core-ethereum]
workspace = true

[dependencies.zeth-preflight]
workspace = true

[dependencies]
alloy.workspace = true
reth-chainspec.workspace = true
reth-primitives.workspace = true
