[package]
name = "zeth-preflight-ethereum"
version = "0.1.0"
edition = "2021"

[dependencies.zeth-core]
workspace = true

[dependencies.zeth-core-ethereum]
workspace = true

[dependencies.zeth-preflight]
workspace = true

[dependencies]
alloy.workspace = true
reth-chainspec.workspace = true
reth-primitives.workspace = true

[features]
erigon-range-queries = ["zeth-preflight/erigon-range-queries"]
