[package]
name = "zeth-preflight-optimism"
version = "0.1.0"
edition = "2021"

[dependencies.zeth-core]
workspace = true

[dependencies.zeth-core-optimism]
workspace = true

[dependencies.zeth-preflight]
workspace = true

[dependencies]
alloy.workspace = true
op-alloy-consensus.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true


reth-chainspec = { workspace = true, features = ["optimism"] }
reth-consensus.workspace = true
reth-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-evm = { workspace = true, features = ["optimism"] }
reth-optimism-consensus = { workspace = true, features = ["optimism"] }
reth-primitives = { workspace = true, features = ["optimism"] }
reth-revm = { workspace = true, features = ["optimism"] }
reth-storage-errors.workspace = true

serde_json.workspace = true

[features]
erigon-range-queries = ["zeth-preflight/erigon-range-queries"]
