[package]
name = "zeth-preflight-optimism"
version = "0.1.0"
edition = "2021"

[dependencies.zeth-core]
workspace = true

[dependencies.zeth-core-optimism]
workspace = true

[dependencies.zeth-preflight]
workspace = true

[dependencies]
alloy.workspace = true
op-alloy-consensus.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true


reth-chainspec = { workspace = true }
reth-codecs = { workspace = true, features = ["op"] }
reth-consensus.workspace = true
reth-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-evm = { workspace = true }
reth-optimism-consensus = { workspace = true }
reth-optimism-primitives = { workspace = true }
reth-primitives = { workspace = true }
reth-revm = { workspace = true }
reth-storage-errors.workspace = true

serde_json.workspace = true