[package]
name = "zeth-preflight"
version = "0.1.0"
edition = "2021"

[dependencies.zeth-core]
workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
env_logger.workspace = true
hashbrown.workspace = true
log.workspace = true
serde.workspace = true
flate2.workspace = true

reth-chainspec.workspace = true
reth-revm.workspace = true
reth-primitives.workspace = true

serde_json.workspace = true
serde-brief.workspace = true
tokio.workspace = true
tracing.workspace = true
